--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,11 @@ MarkupSafe==0.23
 pep8==1.7.0
 pexpect==4.2.1
 pickleshare==0.7.4
+progressbar2==3.11.0
 prompt-toolkit==1.0.8
 ptyprocess==0.5.1
 Pygments==2.1.3
+python-utils==2.0.0
 pytz==2016.7
 requests==2.12.1
 simplegeneric==0.8.1
